[tool.poetry]
name = "modeltools"
version = "0.1.1"
description = ""
authors = ["Eduardo Rivero <edu.ice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
